<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wanda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- 主页面 HomeActivity 布局 string 资源 -->
	<string name="string_activity_home_title_layout_textview">太仓万达广场</string>
	<string name="string_activity_home_rightbtns_layout_btn_map">地图</string>
	<string name="string_activity_home_rightbtns_layout_btn_shoplist">列表</string>
	<string name="string_activity_home_rightbtns_layout_btn_parking">停车位</string>	
	<string name="string_activity_home_bottom_roller_layout_textview">这里放打折信息…… 随便打打折，嘛钱不钱的，乐呵乐呵得了……这里放打折信息…… 随便打打折，嘛钱不钱的，乐呵乐呵得了……</string>
	
	<!-- 关于页面 AboutActivity 布局 string 资源 -->
	<string name="string_activity_about_layout_title_layout_textview">关于我们</string>
	<string name="string_activity_about_layout_intro">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;太仓万达广场位于太仓市上海东路与娄江路交汇处，县府街南侧，建设用地10.75万平方米，建筑面积约47.7万平方米，太仓万达广场内规划了大型商业中心、城市步行街、商务酒店、甲级写字楼、高级公寓、电影院线等多种业态，集购物、餐饮、文化、娱乐、商务、休闲等各类功能于一体。</string>
	<string name="string_activity_about_layout_web_name">网站：</string>
	<string name="string_activity_about_layout_web_content">plaza.wanda.cn</string>
	<string name="string_activity_about_layout_phone_name">电话：</string>
	<string name="string_activity_about_layout_phone_content">0512 53203999</string>
	
	<!-- 地图页面 MapActivity 布局 string 资源 -->
	<string name="string_activity_map_layout_title_layout_textview">太仓万达广场</string>
	
	
	<!-- 路径页面 PathActivity 布局 string 资源 -->
	<string name="string_activity_path_layout_title_layout_textview">路径</string>
	
	
	<!-- 店铺列表页面 ShopListActivity 布局 string 资源 -->
	<string name="string_activity_shoplist_layout_title_layout_textview">店铺列表</string>
	<string name="activity_shoplist_layout_search_layout_btn_category_all">全部</string>
    <string name="activity_shoplist_layout_search_layout_btn_category_shopping">购物</string>
    <string name="activity_shoplist_layout_search_layout_btn_category_playing">娱乐</string>
    <string name="activity_shoplist_layout_search_layout_btn_category_eating">吃喝</string>
    <string name="activity_shoplist_layout_search_layout_edittext_input_hint">要查询的内容……</string>
    
    <!-- 停车位页面 ParkingActivity 布局 string 资源 -->
    <string name="string_activity_parking_layout_title_layout_textview">找车位</string>
    
    
    <!-- 优惠券列表页面 CouponListActivity 布局 string 资源 -->
    <string name="string_activity_couponlist_layout_title_layout_textview">优惠券列表</string>
    
    <!-- 店铺详情页面 ShopDetailActivity 布局 string 资源 -->
    <string name="string_activity_shopdetail_layout_title_layout_textview">店铺详情</string>
    
    <!-- 品牌墙页面 BrandWallActivity 布局 string 资源  -->
    <string name="string_activity_brandwall_layout_title_layout_textview">品牌墙</string>
    

    
	
</resources>
