<?xml version="1.0" encoding="utf-8"?>
<!-- 关于页面 AboutActivity 布局 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/activity_about_layout"
    android:background="@drawable/activity_about_bg"
>
    
    <!-- 最顶部的 回退键 和  title标题 -->
	<RelativeLayout
        android:id="@+id/activity_about_layout_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/activity_title_layout_bg"
        android:gravity="center"
     >

        <ImageButton
            android:id="@+id/activity_about_layout_title_layout_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@drawable/icon_back"
         />

        <TextView
            android:id="@+id/activity_about_layout_title_layout_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_activity_about_layout_title_layout_textview"
			android:textColor="#FFFFFF"            
			android:textSize="26sp"
			android:gravity="center"
            android:layout_toRightOf="@id/activity_about_layout_title_layout_btn_back"
            
          />
    </RelativeLayout>
    
	<!-- 图片信息 -->
	<ImageView
	    android:id="@+id/activity_about_layout_imageview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/activity_about_layout_title_layout"
	    android:background="@drawable/activity_about_layout_imageview"
	 />
	
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/activity_about_layout_imageview"
	    android:layout_marginTop="20dp"
	    android:fadingEdge="vertical"
	    android:scrollbars="vertical" 
	 >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	     >

	        <TextView
	            android:id="@+id/activity_about_layout_intro"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/string_activity_about_layout_intro"
	            android:textColor="#000000" 
	            android:textSize="18sp" 
	         />

	        <TextView
	            android:id="@+id/activity_about_layout_web_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/activity_about_layout_intro"
	            android:layout_alignParentLeft="true"
	            android:padding="15dp"
	            android:textColor="#000000"
	            android:textSize="16sp" 
	            android:text="@string/string_activity_about_layout_phone_name"
	        />
	        
	        <TextView
	            android:id="@+id/string_activity_about_layout_web_content"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/activity_about_layout_web_name"
	            android:layout_below="@id/activity_about_layout_intro"
	            android:layout_alignBaseline="@id/activity_about_layout_web_name"
	            android:layout_marginLeft="5dp"
	            android:gravity="center_vertical"
	            android:autoLink="web"
	            android:textSize="16sp" 
	            android:text="@string/string_activity_about_layout_web_content"
	        />

	        <TextView 
	            android:id="@+id/activity_about_layout_phone_name" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/activity_about_layout_web_name"
	            android:layout_alignParentLeft="true"
	            android:padding="15dp"
	            android:textColor="#000000"
	            android:textSize="16sp" 
	            android:text="@string/string_activity_about_layout_phone_name"
	        />
	        
	        <TextView 
	            android:id="@+id/activity_about_layout_phone_content" 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	             android:layout_toRightOf="@id/activity_about_layout_phone_name"
	            android:layout_below="@id/activity_about_layout_web_name"
	            android:layout_alignBaseline="@id/activity_about_layout_phone_name"
	            android:layout_marginLeft="5dp"
	            android:gravity="center_vertical"
	            android:autoLink="phone"
	            android:textSize="16sp" 
	            android:text="@string/string_activity_about_layout_phone_content"
	        />
	    </RelativeLayout>
	</ScrollView>
<!-- 简介 -->

    
    
    

</RelativeLayout>
